<resources>
    <string name="app_name">Daryaye Sokhan</string>
    <string name="git_url" translatable="false">https://github.com/ham3da/daryaye-sokhan</string>
    <string name="new_collection_url" translatable="false">https://daryaye-sokhan.ir/add-new-collection/</string>
    <string name="beytas_url" translatable="false">https://cafebazaar.ir/app/ir.ham3da.beyteshekasteh</string>
    <string name="beytas_play_url" translatable="false">https://play.google.com/store/apps/details?id=ir.ham3da.beyteshekasteh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sea of Poetry – A Persian Poetry Library</string>
    <string name="nav_header_subtitle">%d books of %d poets</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>
    <string name="warning">Warning</string>
    <string name="warning_msg">Warning Message</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share">Share</string>
    <string name="share_via">Share via…</string>
    <string name="share_friend">Share to friends</string>
    <string name="help">Help</string>
    <string name="about">About app</string>
    <string name="other_apps">Our apps</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_this">Rate this app</string>
    <string name="close">Close</string>
    <string name="communicate">Communicate</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="copy1">Copy</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="application">Application</string>
    <string name="email">Email</string>
    <string name="telegram">Telegram</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="contact_text">Contact text</string>
    <string name="choose_email_app">Select an app</string>
    <string name="free">Free</string>
    <string name="prepar_database">Preparing the database&#8230;</string>
    <string name="database_indexing">Database indexing&#8230;</string>
    <string name="books">books</string>
    <string name="book">book</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="biography">Short biography</string>
    <string name="url_empty">URL is empty!</string>
    <string name="verse">Verse</string>
    <string name="first_verse">First verse</string>
    <string name="second_verse">Second verse</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="select_all">Select all</string>
    <string name="un_select_all">Unselect All</string>
    <string name="options">Options</string>
    <string name="category">Category</string>
    <string name="poem">Poem</string>
    <string name="poet">Poet</string>
    <string name="next_poem">Next poem</string>
    <string name="previous_poem">Previous poem</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="nothing_add">Nothing added!</string>
    <string name="begin_of_list">You are at the beginning of the poems list!</string>
    <string name="end_of_list">You are at the end of the poems list!</string>
    <string name="search_hint">Search word&#8230;</string>
    <string name="search_limits">Search Limits</string>
    <string name="select_Poet">Select Poet:</string>
    <string name="all">All</string>
    <string name="title">Title</string>
    <string name="select_book">Select poetry collection:</string>
    <string name="select_unselect_all">Select/Unselect All</string>
    <string name="select_all_categories">Select all categories</string>
    <string name="find">Find</string>
    <string name="all_poets">All poets</string>
    <string name="search_in">Search in:</string>
    <string name="reference">Reference</string>
    <string name="search_in_app">Search in Sea of Poetry</string>
    <string name="items_found">item(s) found.</string>
    <string name="voice_search">Voice Search</string>
    <string name="tab_poets">Poets</string>
    <string name="tab_favorites">Favorites</string>
    <string name="developer_name">Javad Ehteshami</string>
    <string name="persian" translatable="false">فارسی(ایران)</string>
    <string name="english" translatable="false">English(United States)</string>
    <string name="change_lang">Change language</string>
    <string name="text">Text</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="browse">Browse</string>
    <string name="fav_delete_ques">Are you sure you want to remove "%s" from your favorites list?</string>
    <string name="poet_delete_ques">Are you sure you want to remove "%s" from the poets list?</string>
    <string name="poet_delete_poem_au">Are you sure you want to remove "%s" from the declaim list?</string>
    <string name="delete_all_au">Are you sure you want to delete the marked items?</string>
    <string name="indexing">Indexing</string>
    <string name="poets_indexing">Numbering the list of poets</string>
    <string name="verse_indexing">Numbering lines of poems</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="Language_des">It requires to be re-run the application.</string>
    <string name="Text_options">Text options</string>
    <string name="Text_size">Text size</string>
    <string name="Text_size_des">This size applies to the text of the list of poets, categories, poems and favorites.</string>
    <string name="add_new_collection">Add new collection</string>
    <string name="collections">Collections</string>
    <string name="collection_management">Collections Management</string>
    <string name="download_col">Download collections</string>
    <string name="download_failed">Download failed!</string>
    <string name="downloading">Downloading</string>
    <string name="internet_failed">Internet connection failed! Please connect your device to the Internet.</string>
    <string name="success_add">New collection added successfully.</string>
    <string name="file_received">Received:</string>
    <string name="file_size">File Size:</string>
    <string name="random_poetry_scope">Divination Scope</string>
    <string name="divination">Divination</string>
    <string name="random_poetry">Divination</string>
    <string name="select_poetry_scope">Select Poet and Poetry Collection:</string>
    <string name="change_scope">Change scope</string>
    <string name="change_scope_des">This will change the Random Poetry Scope.</string>
    <string name="current_scope">Current scope:</string>
    <string name="done">Done</string>
    <string name="declaim">Declaim</string>
    <string name="declaims">Available declaims</string>
    <string name="sound">Sound</string>
    <string name="download">Download</string>
    <string name="download_declaim">Download declaims</string>
    <string name="play">Play</string>
    <string name="access_note">Dear user, Allow the app to access the external storage of the device to save audio files.</string>
    <string name="notice">Notice</string>
    <string name="download_success">File download successful.</string>
    <string name="select_an_item">Please select an item:</string>
    <string name="please_select">Please select</string>
    <string name="no_audio_this_item">No audio files have been added for this item so far!</string>
    <string name="no_song_this_item">No songs have been added for this item yet!</string>
    <string name="no_donload_this_item">No audio files downloaded yet Do you want to download?</string>
    <string name="last_read">Last read</string>
    <string name="signature">Signature</string>
    <string name="signature_des">A phrase that will be added at the end of the poems you share.</string>
    <string name="general">General</string>
    <string name="backup">Backup</string>
    <string name="backup_des">Create a backup of your favorite poems and app settings.</string>
    <string name="social_networks">Social Networks</string>
    <string name="app_social_networks">%s on social networks</string>
    <string name="app_telegram_channel">Join the telegram channel</string>
    <string name="app_instagram">Follow on Instagram</string>
    <string name="update">Update</string>
    <string name="update_title">Update Ready</string>
    <string name="app_share_des">The %s app is a valuable library of great Persian poetry</string>
    <string name="optimize">Optimize</string>
    <string name="optimizing">Optimizing</string>
    <string name="optimize_db">Optimize database</string>
    <string name="optimize_db_des">We recommend optimizing the database after removing one or more poets</string>
    <string name="please_wait2">Please wait. It may take a few minutes.</string>
    <string name="share_as_img">Share as image</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_background">Background</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_shadow">Shadow</string>
    <string name="select_picture">Select Picture</string>
    <string name="saving">Saving&#8230;</string>
    <string name="save">Save</string>
    <string name="saved">Image Saved Successfully</string>
    <string name="failed_save">Failed to save Image! try again.</string>
    <string name="discard">Discard</string>
    <string name="alret_save">Are you want to exit without saving image?</string>
    <string name="opacity">Opacity</string>
    <string name="rotation">Rotation</string>
    <string name="error_occurred">Unfortunately, an unwanted error has occurred!</string>
    <string name="change_poem_font">Fonts of Poems</string>
    <string name="change_poem_font_des">Change the font of the poems.</string>
    <string name="download_all">Download all</string>
    <string name="reload">Reload</string>
    <string name="dont_forget_poetry">Don\'t forget poetry</string>
    <string name="donate">Donate</string>
    <string name="night_theme">Night mode</string>
    <string name="daily_poem">Daily Poetry</string>
    <string name="daily_poem_switch">Show one verse every day as a notification.</string>
    <string name="set_the_time">Set the time</string>
    <string name="show_every_day">Show every day</string>
    <string name="JoinOurTeam">Join Our Team!</string>
    <string name="WereOpenSource">We\'re open-source; together we grow stronger.</string>
    <string name="ViewOnGitHub">View on GitHub</string>
    <string name="HelpCollection">Help Enrich Our Poetry Collection</string>
    <string name="HelpCollectionDes">Got beautiful poems? Add them to our treasure.</string>
    <string name="Contribute">Contribute</string>
    <string name="OurProducts">Our Special Products for You</string>
    <string name="CheckOurProducts">Check out our useful tools and plugins.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="description">Description</string>
</resources>