<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general">

        <SwitchPreferenceCompat
            android:background="?attr/listBackgroundColor"
            app:defaultValue="false"
            app:icon="@drawable/ic_brightness_3_gray_24dp"
            app:key="night_theme"
            app:title="@string/night_theme" />

        <EditTextPreference
            app:icon="@drawable/ic_signature"
            app:key="signature"
            app:negativeButtonText="@string/cancel"
            app:positiveButtonText="@string/ok"
            app:summary="@string/signature_des"
            app:title="@string/signature" />
    </PreferenceCategory>

    <PreferenceCategory
        android:textSize="15sp"
        app:title="@string/indexing">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_format_list_bulleted_gray_24dp"
            app:key="PoetListIndexStatus"
            app:title="@string/poets_indexing" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_format_list_bulleted_gray_24dp"
            app:key="VerseListIndexStatus"
            app:title="@string/verse_indexing" />

    </PreferenceCategory>


    <!--    <PreferenceCategory-->
    <!--        app:title="@string/random_poetry_scope">-->

    <!--        <Preference-->
    <!--            app:key="randomPoem"-->
    <!--            app:icon="@drawable/ic_dice_gray"-->
    <!--            app:title="@string/change_scope"-->
    <!--            app:summary="@string/change_scope_des"/>-->

    <!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/language">

        <Preference
            app:icon="@drawable/ic_language_gray_24dp"
            app:key="langSettingList"
            app:summary="@string/Language_des"
            app:title="@string/select_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/random_poetry_scope">

        <ListPreference
            app:defaultValue="24"
            app:entries="@array/randomSelectedCatString"
            app:entryValues="@array/randomSelectedCatValues"
            app:icon="@drawable/ic_shuffle_gray_24dp"
            app:key="randomSelectedCat"
            app:title="@string/please_select"

            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/daily_poem">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_format_list_bulleted_gray_24dp"
            app:key="random_notify"
            app:title="@string/show_every_day"
            app:summary="@string/daily_poem_switch"
            />

        <com.dr1009.app.chronodialogpreference.TimeDialogPreference
            app:icon="@drawable/ic_baseline_access_time_24"
            android:defaultValue="13:00"
            android:key="random_notify_time"
            android:title="@string/set_the_time"
            app:customFormat="HH:mm"
            app:force24HourModePicker="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Text_options">

        <Preference
            app:icon="@drawable/ic_title_gray_24dp"
            app:key="setFont"
            app:summary="@string/change_poem_font_des"
            app:title="@string/change_poem_font" />

        <EditTextPreference
            app:defaultValue="14"
            app:icon="@drawable/ic_title_gray_24dp"
            app:key="TextSize"
            app:negativeButtonText="@string/cancel"
            app:positiveButtonText="@string/ok"
            app:summary="@string/Text_size_des"
            app:title="@string/Text_size" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/optimize">

        <Preference
            app:icon="@drawable/ic_database_gray"
            app:key="optimize_db"
            app:summary="@string/optimize_db_des"
            app:title="@string/optimize_db" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
