<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="3"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/action_add_colection"
        android:orderInCategory="2"
        android:title="@string/add_new_collection"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_random_poem"
        android:orderInCategory="1"
        android:title="@string/random_poetry"
        android:icon="@drawable/ic_shuffle_white_24dp"
        app:showAsAction="always"
        />

</menu>
