<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/listBackgroundColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/progress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/search_limits"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_Poet" />

        <Spinner
            android:id="@+id/poet_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_spinner_dropdown"
            android:spinnerMode="dropdown" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/okBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_check_black_24dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/okBtn"
            android:drawableStart="@drawable/ic_clear_my_black_24dp"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>