<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- کارت محصولات -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/admob_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OurProducts"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:lineSpacingExtra="8sp" />

                <TextView
                    android:id="@+id/admob_des_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/CheckOurProducts"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:lineSpacingExtra="6sp" />

                <Button
                    android:id="@+id/btn_view_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minWidth="200dp"
                    android:padding="12dp"
                    android:drawableEnd="@drawable/ic_baseline_apps_24"
                    android:drawablePadding="6dp"
                    android:backgroundTint="@color/btnColor"
                    android:text="@string/view_admob"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    app:drawableTint="@color/white" />
            </LinearLayout>


        <!-- کارت همکاری -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/join_dev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/JoinOurTeam"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:lineSpacingExtra="8sp" />

                <TextView
                    android:id="@+id/join_dev_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/WereOpenSource"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:lineSpacingExtra="6sp" />

                <Button
                    android:id="@+id/btn_donate_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minWidth="200dp"
                    android:padding="12dp"
                    android:drawableEnd="@drawable/ic_baseline_android_24"
                    android:drawablePadding="6dp"
                    android:backgroundTint="@color/btnColor"
                    android:text="@string/ViewOnGitHub"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    app:drawableTint="@color/white" />
            </LinearLayout>

        <!-- کارت مجموعه‌ها -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/join_collections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpCollection"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:lineSpacingExtra="8sp" />

                <TextView
                    android:id="@+id/join_collections_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/HelpCollectionDes"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:lineSpacingExtra="6sp" />

                <Button
                    android:id="@+id/btn_donate_collections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minWidth="200dp"
                    android:padding="12dp"
                    android:drawableEnd="@drawable/ic_folder_black_24dp"
                    android:drawablePadding="6dp"
                    android:backgroundTint="@color/btnColor"
                    android:text="@string/Contribute"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    app:drawableTint="@color/white" />
            </LinearLayout>


    </LinearLayout>
</ScrollView>