<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_weight="0"
    android:background="@color/colorPrimary"
    android:padding="5dp">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/about"
        android:src="@drawable/ic_info_24px"
        android:tint="@color/white"

        />

    <TextView
        android:id="@+id/dlg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:text="@string/title"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/dialog_icon"
        android:textStyle="bold"
        android:textSize="16sp"/>
</RelativeLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="5dp">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:layout_weight="0"
    android:padding="5dp">


    <Button
        android:id="@+id/okBtn"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarPositiveButtonStyle"
        android:textSize="14sp"
        android:text="@string/close" />

</RelativeLayout>
</LinearLayout>